# CovidAid

./: README.md
App/: README.md  build.gradle  settings.gradle
App/app/: build.gradle
App/app/src/androidTest/java/com/bit_loons/covidaid/: ExampleInstrumentedTest.java
App/app/src/main/: AndroidManifest.xml
App/app/src/main/java/com/bit_loons/covidaid/: HistoryActivity.java  MainActivity.java
App/app/src/main/res/drawable/: ic_baseline_home_work_24.xml  ic_launcher_background.xml
App/app/src/main/res/layout/: activity_help_others.xml  activity_history.xml  activity_home.xml  activity_leaderboard.xml  activity_login.xml  activity_main.xml  activity_post_request.xml  activity_signup.xml  content_help_others.xml  content_history.xml  content_leaderboard.xml  content_sheet_help_others.xml
App/app/src/main/res/values/: colors.xml  strings.xml
App/gradle/wrapper/: gradle-wrapper.properties
Backend/: README.md
backend/: .gitignore  README.md  app.py  config.py  pyproject.toml
backend/backend/: __init__.py  main.py  models.py  schemas.py  utils.py
backend/docs/: api.md
backend/migrations/versions/: 0f361ad4fc33_.py  2b1375f344ae_.py  2e651eb00e3a_.py  48ee854eb486_.py  65291d5edd48_.py  6a6df86a422f_.py  7518a752d0da_.py  96fbf8257612_.py  97be1663d11c_.py  9aab99cbf5c8_.py  b51f68f90235_.py  cc7575091441_.py
backend/route_testing/: accept_request.json  all_requests.json  ask_help.json  complete_request.json  login.json  new_request.json  request_history.json  request_info.json  signup.json
(+20 files in other folders)
