[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["awalvie <agrawal.vishesh.178@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
black = "^20.8b1"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
